# mlops-lifecycle-management

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.cursor/rules/: mlops_study.mdc
.github/workflows/: ci.yml
.study_rules/: README
DongWon/research/01_study/: MLOps_Fundamentals and Concepts.md  MLOps_Research_Overview.md
DongWon/research/02_nike_success_story/: Nike Churn Prediction Analysis.md  Nike_Inspired_AI_SaaS_Proposal.md  Nike_Schema_Details.md  Nike_example.md
JaeHyeok/research/: 인지해야 할 것.md
JaeHyeok/research/Application_example/: 서로다른기업_적용사례.md
JaeHyeok/research/study-guide/: MLOps_스터디_가이드.md
JaeHyeok/research/technology/: 통신사 고객 데이터 이탈.md  파이썬_간단한 이탈 예측 예시.md
MinSung/: customer_response.md  team_member.md
MinSung/.cursor/rules/: mlops_lifecycle.mdc
MinSung/market-research/: AutoML_Market_Research.md  E-commerce_Data_Analysis_Case_Studies.md  Ecommerce_SMB_Market_Research.md
MinSung/prototyping/: AI_SaaS_Proposal.md  AI_SaaS_Proposal_V2.md  AI_SaaS_Technical_Specification.md  Dockerfile.simple  PROJECT_BRIEF.md  README.md  docker-compose.yml  env.example
MinSung/prototyping/src/api/: main.py  models.py
MinSung/prototyping/src/utils/: __init__.py  config.py  logging.py
MinSung/prototyping/tests/: test_models.py  test_utils.py
MinSung/tech-research/: MLOps_Best_Practices.md  MLOps_Complete_Guide.md  MLOps_Current_Problems.md  MLOps_Learning_Roadmap.md  MLOps_Necessity_Guide.md  MLOps_Projects_2025.md  MLOps_Tools_Comparison.md  MLOps_for_Deep_Learning.md  Model_Retraining_Triggers_Research.md
Minsu/research/lostark_research/: battle-analyzer.md
Minsu/research/market_research/: E-commerce_Data_Analysis_ML_Study.md  E-commerce_MLOps_Study.md
Minsu/research/study/: study.md
config/: config.yaml
monitoring/: start_monitoring.py
scripts/: setup.py
src/: __init__.py
src/api/: __init__.py  auth.py
src/utils/: performance.py  security.py
tests/: __init__.py
wildmental/: [250731]프로젝트_구조_피드백.md  mlops-for-shoppingmall-analysis.md  prj-processing-strategy.md
